[package]
name = "dharitri-bls"
version = "0.2.0"
edition = "2021"

authors = ["DharitrI <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-bls"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "BLS signature library for DharitrI"
keywords = ["dharitri", "BLS", "blockchain"]
categories = ["cryptography"]

[lib]
path = "src/lib.rs"

[dependencies]
criterion = "0.7.0"
hex = "0.4.0"

[[bench]]
name = "bls381_benches"
harness = false

[[bench]]
name = "multi_verify_benches"
harness = false
